--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
             gcc clang git libssl-dev lz4 libncurses5-dev libelf-dev \
             python3 python3-pip rsync zip
 
-      - name: Clone Toolchain (Proton Clang)
+      - name: Clone Toolchain
         run: |
           git clone --depth=1 https://github.com/kdrag0n/proton-clang clang
 
@@ -36,7 +36,7 @@ jobs:
             CROSS_COMPILE_COMPAT=arm-linux-gnueabi- \
             CLANG_TRIPLE=aarch64-linux-gnu-
 
-      - name: Upload zImage or boot.img
+      - name: Upload Kernel Output
         uses: actions/upload-artifact@v4
         with:
           name: compiled-kernel
